# DeKoi

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CLEAN_ROOM.md  CONTRIBUTING.md  CORE_FEATURES_HANDOFF.md  DESIGN.json  DESIGN.md  DOMAIN_MODEL.md  LICENSE  PRODUCT.md  PROVENANCE.md  README.md  SURFACE_LABELS.md  UI_HANDOFF.md  deny.toml  eslint.config.js  index.html  knip.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  issue_report.md
.github/agents/: dekoi-workflow.md
.github/bunny-review/: rules.json  (+6 more)
design/: pond-mockup.html
docs/: architecture.md  generation-macro-semantics.md  getting-started.md  naming-decisions.md  project-status.md  remote-runtime-contract.md  runtime-model.md  storage-model.md  storage-roadmap.md
public/: manifest.json
scripts/: check-agent-routing.mjs  check-agent-routing.test.mjs  check-desktop-contracts.mjs  check-frontend-boundaries.mjs  check-line-endings.mjs  check-provider-secret-safety.mjs  check-runtime-contracts.mjs  check-starter-preset-integrity.mjs  check-storage-contracts.mjs  remote-runtime-fixture.mjs  run-tauri.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_dialog.rs  host.rs  lib.rs  main.rs  provider_response.rs  provider_transport.rs  runtime.rs  runtime_args.rs  secrets.rs  storage.rs
src-tauri/src/provider_transport/: auth.rs  connection_check.rs  endpoints.rs  error_sanitization.rs  generation.rs  http.rs  models.rs  prompt.rs  value.rs
src-tauri/src/provider_transport/generation/: custom_parameters.rs  dto.rs  payload.rs
src-tauri/src/storage/: json_file.rs
test-fixtures/: protected-credential-custom-parameter-names.json  protected-custom-parameter-names.json  provider-parameter-payloads.json  provider-response-parity.json
(+747 files in other folders)
