[package]
name = "dekoi"
version = "0.1.0"
description = "DeKoi desktop host"
authors = ["Xelvanas"]
edition = "2021"

[lib]
name = "dekoi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
