[package]
name = "dekoi"
version = "0.1.0"
description = "DeKoi desktop host"
authors = ["Xelvanas"]
edition = "2021"

[lib]
name = "dekoi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
keyring = "4.1.2"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
