[package]
name = "dekoi"
version = "0.1.0"
description = "DeKoi desktop host"
authors = ["Xelvanas"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "dekoi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
keyring = "4.1.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }
